@@ -1,5 +1,9 @@
 = Version descriptions
 
+== master
+
+- Resolves: gh#178 prevent negative sleep durations
+
 == 7.2.1
 
 - Resolves: gh#184 fixed overlapped and blocked texts on main page (yuhuitech)
